--- a/jrs2Covid/src/styles.css
+++ b/jrs2Covid/src/styles.css
@@ -1,17 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap");
 body,
 html {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-  color: rgb(19, 19, 134);
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+    color: rgb(19, 19, 134);
 }
 
 .bs {
-  padding: 1em;
-  margin-bottom: 2em;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    padding: 1em;
+    margin-bottom: 2em;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
