--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
@@ -6,12 +6,10 @@ div {
 .root {
   position: relative;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   text-align: center;
   width: 100%;
-  height: 300px;
-  margin-bottom: 2em;
-  /* border: solid lightgrey 0.5px; */
+  height: 200px;
 }
 
 .col {
@@ -19,10 +17,8 @@ div {
   justify-content: center;
   align-items: center;
   width: 150px;
-  padding: 5px;
+  /* padding: 5px; */
   color: rgb(19, 19, 134);
-
-  /* border: solid black 1px; */
 }
 
 .col > * {
@@ -34,7 +30,7 @@ div {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 6em;
+  padding: 4em;
 }
 
 p {
@@ -44,8 +40,8 @@ p {
   align-items: center;
   text-align: center;
 }
-/* .overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-} */
+
+.donut {
+  display: flex;
+  justify-content: space-around;
+}
