--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
@@ -1,17 +1,18 @@
 <div class="bs">
 
+
     <div class="root" *ngIf="region; else spinner">
 
         <div class="col">
             <pie-chart [region]="region" [partial]="region?.totalCases" [total]="region?.population"
-                [color]="'#70a9ff'">
+                [color]="'#1e07b5'">
             </pie-chart>
             <p>Total Cases per Population</p>
         </div>
 
         <div class="col">
             <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.population"
-                [color]="'#ff3333'">
+                [color]="'#f23d3a'">
             </pie-chart>
             <p>Total Deaths per Population</p>
         </div>
@@ -25,11 +26,14 @@
 
         <div class="col">
             <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.totalCases"
-                [color]="'#ffff33'">
+                [color]="'#d6b924'">
             </pie-chart>
             <p>Deaths per Total Cases</p>
         </div>
     </div>
+
+
+
 
 
     <ng-template #spinner>
