fixed dropdown placement of map

--- a/jrs2Covid/src/app/components/choropleth/choropleth.component.css
+++ b/jrs2Covid/src/app/components/choropleth/choropleth.component.css
@@ -1,3 +1,10 @@
+div.select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+}
+
 .map-canvas {
     display: grid;
     place-items: center;
