--- a/jrs2Covid/src/app/components/choropleth/choropleth.component.html
+++ b/jrs2Covid/src/app/components/choropleth/choropleth.component.html
@@ -1,12 +1,16 @@
-<div class="bs">
+<div class="bs root">
 
     <div class="map-canvas">
-        <spinner *ngIf="!data; else select"></spinner>
-
-        <ng-template #select>
-            <select [(ngModel)]="fillMode" (ngModelChange)="recolor()">
-                <option *ngFor="let i of [1, 2, 3, 4 , 5, 6]" [value]="i">{{fillModes[i]}}</option>
-            </select>
-        </ng-template>
+        <spinner *ngIf="!data;"></spinner>
     </div>
+
+    <div class="select">
+        <select *ngIf="data"
+                [(ngModel)]="fillMode"
+                (ngModelChange)="recolor()">
+            <option *ngFor="let i of [1, 2, 3, 4 , 5, 6]"
+                    [value]="i">{{fillModes[i]}}</option>
+        </select>
+    </div>
+
 </div>
