added titles to components

--- a/jrs2Covid/src/app/components/choropleth/choropleth.component.html
+++ b/jrs2Covid/src/app/components/choropleth/choropleth.component.html
@@ -1,5 +1,5 @@
 <div class="bs">
-
+    <h1>COVID DATA TRACKER</h1>
     <div class="map-canvas">
         <spinner *ngIf="!data; else select"></spinner>
 
