--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
@@ -1,47 +1,52 @@
 div {
-  display: flex;
-  color: black; /*this is text under donut charts*/
+    display: flex;
+    color: black;
+    /*this is text under donut charts*/
 }
 
 .root {
-  position: relative;
-  flex-direction: row;
-  justify-content: space-evenly;
-  text-align: center;
-  width: 100%;
-  height: 200px;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+    width: 100%;
+    height: 200px;
 }
 
 .col {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  /* padding: 5px; */
-  color: rgb(19, 19, 134);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    /* padding: 5px; */
+    color: rgb(19, 19, 134);
 }
 
-.col > * {
-  margin: 0;
-  width: 100%;
+.col>* {
+    margin: 0;
+    width: 100%;
 }
 
 .spinner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4em;
 }
 
 p {
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .donut {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
+}
+
+h1 {
+    text-align: center;
 }
