--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,6 +1,6 @@
 <div class="bs">
 
-
+    <h1>COVID STATE NUMBERS</h1>
     <div style="overflow-x: auto;">
 
         <table class="table">
@@ -8,8 +8,7 @@
             <tr class="table-row">
                 <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
                     {{header.label}}
-                    <fa-icon class="icon"
-                        [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
+                    <fa-icon class="icon" [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
                     </fa-icon>
                 </th>
             </tr>
