--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.css
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.css
@@ -1,6 +1,12 @@
+.table-container {
+    border: solid 1px black;
+    width: 100%;
+}
+
 table {
     border: solid rgb(111, 145, 141) 1px;
     width: 100%;
+    table-layout: fixed;
     border-collapse: collapse;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
@@ -11,11 +17,11 @@ table {
 
 th {
     height: 40px;
-    width: 200px;
     background-color: rgb(138, 170, 167);
     border: solid rgb(111, 145, 141) 1px;
     text-align: center;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 th:hover {
@@ -62,4 +68,11 @@ td.spinner {
     /* equation that displays 10 rows */
     height: calc(1.75em * 10 * 0.75);
     overflow: auto;
+}
+
+th div,
+td div {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
