--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,30 +1,36 @@
 <div class="bs">
 
 
-    <div style="overflow-x: auto;">
+    <div *ngIf="data; else spinner"
+         class="table-container">
 
-        <table class="table">
+        <table>
 
             <tr class="table-row">
-                <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
-                    {{header.label}}
-                    <fa-icon class="icon"
-                        [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
-                    </fa-icon>
+                <th *ngFor="let header of tableHeaders"
+                    (click)="changeSortingMethod(header.value)">
+                    <div>
+                        {{header.label}}
+                        <fa-icon class="icon"
+                                 [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
+                        </fa-icon>
+                    </div>
                 </th>
             </tr>
         </table>
 
         <div class="table-scroll">
-            <table *ngIf="data; else spinner">
-                <tr class="table-row" *ngFor="let region of data">
-                    <ng-template #regionSpan>
-                        <!-- ng template is just a definition. does not render unless told to -->
-                        <span><a [routerLink]="region.region">{{region.region}}</a></span>
-                    </ng-template>
+            <table>
+                <tr class="table-row"
+                    *ngFor="let region of data">
 
-                    <td *ngFor="let col of tableHeaders" class="{{col.value}}">
-                        <span *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</span>
+                    <td *ngFor="let col of tableHeaders"
+                        class="{{col.value}}">
+                        <div *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</div>
+
+                        <ng-template #regionSpan>
+                            <div><a [routerLink]="region.region">{{region.region}}</a></div>
+                        </ng-template>
                     </td>
                 </tr>
 
@@ -43,7 +49,8 @@
         -->
         <table>
             <tr>
-                <td class="spinner" colspan="100%">
+                <td class="spinner"
+                    colspan="100%">
                     <spinner></spinner>
                 </td>
             </tr>
