--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.css
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.css
@@ -60,8 +60,9 @@ td {
     color: rgb(92, 92, 252);
 }
 
-td.spinner {
+.spinner {
     padding: 2.5em;
+    text-align: center;
 }
 
 .table-scroll {
