--- a/jrs2Covid/src/app/components/choropleth/choropleth.component.css
+++ b/jrs2Covid/src/app/components/choropleth/choropleth.component.css
@@ -1,9 +1,10 @@
 .map-canvas {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
 }
 
 h1 {
-    text-align: center;
-    margin-top: 0;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0.25em;
 }
