--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,49 +1,46 @@
-<div class="bs">
+<div *ngIf="data; else spinner" class="table-container">
 
+    <h1>{{parentName + ' Ranked'}}</h1>
 
-    <div *ngIf="data; else spinner" class="table-container">
+    <table>
 
-        <h1>{{parentName + ' Ranked'}}</h1>
+        <tr class="table-row">
+            <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
+                <div>
+                    {{header.label}}
+                    <fa-icon class="icon"
+                        [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
+                    </fa-icon>
+                </div>
+            </th>
+        </tr>
+    </table>
 
+    <div class="table-scroll">
         <table>
+            <tr class="table-row" *ngFor="let region of data">
 
-            <tr class="table-row">
-                <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
-                    <div>
-                        {{header.label}}
-                        <fa-icon class="icon" [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
-                        </fa-icon>
-                    </div>
-                </th>
+                <td *ngFor="let col of tableHeaders" class="{{col.value}}">
+                    <div *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</div>
+
+                    <ng-template #regionSpan>
+                        <div><a [routerLink]="region.region">{{region.region}}</a></div>
+                    </ng-template>
+                </td>
             </tr>
+
         </table>
-
-        <div class="table-scroll">
-            <table>
-                <tr class="table-row" *ngFor="let region of data">
-
-                    <td *ngFor="let col of tableHeaders" class="{{col.value}}">
-                        <div *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</div>
-
-                        <ng-template #regionSpan>
-                            <div><a [routerLink]="region.region">{{region.region}}</a></div>
-                        </ng-template>
-                    </td>
-                </tr>
-
-            </table>
-        </div>
-
     </div>
 
-    <ng-template #spinner>
-        <!-- 
+</div>
+
+<ng-template #spinner>
+    <!-- 
             table will match styling of actual table element
             table is used here because ngIf and ngFor directives 
             cannot be placed on same element 
         -->
-        <div class="spinner">
-            <spinner></spinner>
-        </div>
-    </ng-template>
-</div>
+    <div class="spinner">
+        <spinner></spinner>
+    </div>
+</ng-template>
