--- a/jrs2Covid/src/app/components/covid-app/covid-app.component.html
+++ b/jrs2Covid/src/app/components/covid-app/covid-app.component.html
@@ -23,7 +23,8 @@
                 <a href="https://www.cdc.gov/"> The Centers For Disease Control</a>
             </p>
             <a href="https://www.harborec.com/jrs-coding-school">
-                <img src="../../../assets/images/JRS+Coding+School+Logo.jpeg" class="jrs-logo">
+                <img src="../../../assets/images/JRS+Coding+School+Logo.jpeg"
+                     class="jrs-logo">
             </a>
 
             <p class="jrs">&copy;2021 <a href="https://www.harborec.com/jrs-coding-school">JRS Coding School</a></p>
