--- a/jrs2Covid/src/app/components/covid-app/covid-app.component.css
+++ b/jrs2Covid/src/app/components/covid-app/covid-app.component.css
@@ -6,8 +6,9 @@
 }
 
 .container {
-    width: 100%;
+    width: calc(100% - 2em);
     max-width: 680px;
+    padding: 0 1em;
 }
 
 ul {
@@ -52,6 +53,10 @@ p {
     text-align: center;
     margin-bottom: 0.2em;
     margin-top: 0;
+}
+
+p:first-of-type {
+    margin-top: 0.5em;
 }
 
 .bs {
