--- a/jrs2Covid/src/app/components/home-page/home-page.component.css
+++ b/jrs2Covid/src/app/components/home-page/home-page.component.css
@@ -1,3 +1,7 @@
+.usa {
+  text-align: center;
+}
+
 a {
   text-decoration: none;
 }
@@ -10,8 +14,8 @@ h1 {
   margin-top: 0;
 }
 
-.usa {
-  text-align: center;
+h3 {
+  margin-bottom: 0.25em;
 }
 
 .change {
