--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
@@ -10,7 +10,6 @@ div {
     justify-content: space-evenly;
     text-align: center;
     width: 100%;
-    height: 200px;
 }
 
 .col {
@@ -18,8 +17,9 @@ div {
     justify-content: center;
     align-items: center;
     width: 150px;
-    /* padding: 5px; */
+    max-width: 28%;
     color: rgb(19, 19, 134);
+    padding-bottom: 0.25em;
 }
 
 .col>* {
@@ -35,10 +35,6 @@ div {
 }
 
 p {
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
 
@@ -49,4 +45,5 @@ p {
 
 h1 {
     text-align: center;
+    margin-top: 0;
 }
